added open-sdg schedule

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@astrojs/sitemap": "^3.2.1",
     "astro": "^5.12.1",
+    "marked": "^16.2.1",
     "sass": "^1.85.1",
     "wordcloud": "^1.2.3"
   },
